Fix overflow

--- a/T2/src/style.css
+++ b/T2/src/style.css
@@ -147,6 +147,8 @@ body{
 	text-decoration: none;
 	font-size: 17px;
 	font-weight: bold;
+	height: 10%;
+	overflow: scroll;
 }
 
 .ProductValue{
